syntax = "proto2";
package video_streaming;

message SabrContextSendingPolicy {
  // Start sending the SabrContextUpdates of this type
  repeated int32 start_policy = 1;
  
  // Stop sending the SabrContextUpdates of this type
  repeated int32 stop_policy = 2;

  // Stop and discard the SabrContextUpdates of this type
  // When type of 3, something is cleared from video data (related to SSAP and TIMELINE_CONTEXT)
  repeated int32 discard_policy = 3;
}
